--- a/src/pages/providers.astro
+++ b/src/pages/providers.astro
@@ -52,7 +52,7 @@ try {
 
 const title = metaContent.title;
 const description = metaContent.description;
-const canonical = `${SITE_URL}/providers`;
+const canonical = `${SITE_URL}/providers/`;
 ---
 
 <Layout title={title} description={description} canonical={canonical}>
